@@ -1,5 +1,6 @@
 2009-05-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* flickr.py: Added support for flickr.photos.search.
 	* fspot.py: Fixed a bug.
 	* gphotoframe.glade, photoframe.py: Renamed some object names.
 
